# pickaxe-py

./: .editorconfig  README.md  cspell.config.yaml  meson.build  requirements-devel.txt  requirements.txt  setup.py  test.py
build-aux/: com.bedsteler20.Pickaxe.Devel.json  com.bedsteler20.Pickaxe.json
build-aux/dependencies/: python3-SecretStorage.json  python3-meson.json  python3-minecraft-launcher-lib.json  python3-requirements.json
data/: com.bedsteler20.Pickaxe.appdata.xml  com.bedsteler20.Pickaxe.desktop  com.bedsteler20.Pickaxe.gschema.xml  gresource.xml  meson.build
data/icons/: meson.build
data/ui/: add_instance.blp  instance_card.blp  meson.build  preferences.blp  window.blp
pickaxe/: main.py  meson.build  pickaxe.in.py
pickaxe/backend/: config.py  main.py  meson.build
pickaxe/backend/helpers/: async_utils.py  change_notifier.py  css.py  meson.build  misc.py
pickaxe/backend/managers/: account_manager.py  instance_manager.py  meson.build
pickaxe/backend/model/: instance.py  meson.build
pickaxe/frontend/: meson.build  preferences_window.py  window.py
pickaxe/frontend/dialogs/: about_dialog.py  add_instance_dialog.py  login_dialog.py  meson.build  vanilla_instance_creator.py
pickaxe/frontend/ui/: add_instance.blp  app_info.json  gresource.xml  instance_card.blp  meson.build  prefrences.blp  vanilla_instance_creator.blp  window.blp
pickaxe/frontend/widgets/: instance_card.py  meson.build
pickaxe/helpers/: css.py  promise.py
pickaxe/managers/: account_manager.py  instance_manager.py
pickaxe/model/: base.py  instance.py
pickaxe/ui/: add_instance.blp  help_overlay.blp  instance_card.blp  meson.build  pickaxe.gresource.xml  preferences.blp  vanilla_instance_creator.blp  window.blp
pickaxe/view/: add_instance_dialog.py  download_tracker.py  login_dialog.py  preferences_window.py  vanilla_instance_creator.py  window.py
pickaxe/widgets/: instance_card.py
po/: POTFILES
tools/: fakegir.py  flatpak-pip-generator.py
